# glFun

./: .gitignore  CMakeLists.txt  README  axes.blend  axes.wings  mkbuild  suzanne-color.xcf  suzanne.blend  uv.xcf
libs/: CMakeLists.txt
libs/catch/: CMakeLists.txt
src/: CMakeLists.txt  approx_container.h  bool_voxel_volume.cc  bool_voxel_volume.h  bytes.cc  bytes.h  camera.cc  camera.h  camera_control.cc  camera_control.h  color.cc  color.h  csg.cc  csg.h  explore_shapes.cc  explore_shapes.h  frag.glsl  function_traits.h  gl_util.cc  gl_util.h  gl_viewport_control.cc  gl_viewport_control.h  glfw_window.cc  glfw_window.h  half_curve_mesh.cc  half_curve_mesh.h  half_edge_mesh.cc  half_edge_mesh.h  image.cc  image.h  image_hdr.cc  image_hdr.h  image_png.cc  image_png.h  image_test.cc  labeled_voxel_volume.cc  labeled_voxel_volume.h  lines_frag.glsl  lines_vert.glsl  main.cc  (+33 more)
src/math/: CMakeLists.txt  approx_object.h  matrix.cc  matrix.h  matrix_factories.h  matrix_factories_test.cc  matrix_test.cc  matrix_test_util.h  matrix_vector_product.h  matrix_vector_product_test.cc  util.h  util_test.cc  vector.cc  vector.h  vector_test.cc  vector_test_util.h
